BUG: mobile's menu z-index fixed !!

--- a/css/layout.css
+++ b/css/layout.css
@@ -89,7 +89,8 @@ p {
     right: 35px;
     top: 30px;
     background-color: black;
-
+    z-index: 100;
+    
     display: block;
     padding: 10px 10px;
     text-align: right;
